# university-projects

./: README.md
Advanced C++ OOP (CSCI-4526)/: .gitignore  CMakeLists.txt  readme.docx  readme.md
Advanced C++ OOP (CSCI-4526)/P1-KorideMok/: Output.txt  State-KorideMok.cpp  UnitTests-KorideMok.cpp
Advanced C++ OOP (CSCI-4526)/P10-KorideMok/: Cluster-KorideMok.hpp  DiagBoard-KorideMok.hpp  Exceptions-KorideMok.hpp  Frame-KorideMok.cpp  Frame-KorideMok.hpp  Game-KorideMok.hpp  Square-KorideMok.hpp  (+3 more)
Advanced C++ OOP (CSCI-4526)/P11-KorideMok/: Board-KorideMok.hpp  CMakeLists.txt  Frame-KorideMok.cpp  Frame-KorideMok.hpp  Game-KorideMok.cpp  puzs.txt  tools.cpp
BotClean/: README.md  main.py
BotSavesPrincess/: main.py
CSCI-2226/: .gitignore  Actor.cpp  Actor.hpp  ActorFactory.hpp  ActorType.hpp  Battle.cpp  Battle.hpp  BattleMove.cpp  BattleMove.hpp  BattleMoveFactory.hpp  Car.cpp  Car.hpp  CircularLinkedListTemp.hpp  CommandManager.cpp  CommandManager.hpp  CurseAttack.cpp  CurseAttack.hpp  Game.cpp  Game.hpp  GameController.cpp  GameController.hpp  GhostActor.cpp  GhostActor.hpp  KnightActor.cpp  KnightActor.hpp  MeleeAttack.cpp  MeleeAttack.hpp  MoveType.hpp  README.md  Reservation.cpp  Reservation.hpp  SlotMachine.hpp  SpellAttack.cpp  SpellAttack.hpp  Stack.hpp  SwordAttack.cpp  SwordAttack.hpp  UndoableCommand.cpp  UndoableCommand.hpp  UnsortedCarList.cpp  (+11 more)
CSCI-3331/: MorseCode.ino  README.md
CSCI-4476/: .gitignore  README.md
CSCI-4478-Algorithms/: Searches.py  main.py  pacman.py
CSCI-4478-FinalProject/: Sudoku.py  main.py  tests.py
CSCI-4526-Sudoku/: .gitignore  CMakeLists.txt  README.md  bit masking leftover.txt  readme.md
CSCI-4526-Sudoku/P1-KorideMok/: Output.txt  Square-KorideMok.hpp  State-KorideMok.cpp  State-KorideMok.hpp  SudokuMain-KorideMok.cpp  UnitTests-KorideMok.cpp  UnitTests-KorideMok.hpp  tools.cpp
CSCI-4526-Sudoku/P10-KorideMok/: Board-KorideMok.cpp  Board-KorideMok.hpp  Exceptions-KorideMok.cpp  Frame-KorideMok.cpp  Frame-KorideMok.hpp  Game-KorideMok.cpp  Game-KorideMok.hpp  Square-KorideMok.cpp  Square-KorideMok.hpp  Stack-KorideMok.hpp  State-KorideMok.cpp  State-KorideMok.hpp  SudokuMain-KorideMok.cpp
CSCI-4526-Sudoku/P11-KorideMok/: Board-KorideMok.cpp  Board-KorideMok.hpp  BoardTypes-KorideMok.cpp  BoardTypes-KorideMok.hpp  Cluster-KorideMok.cpp  Cluster-KorideMok.hpp  Frame-KorideMok.cpp  Frame-KorideMok.hpp  Game-KorideMok.cpp  Game-KorideMok.hpp  Square-KorideMok.cpp
CSCI-4526-Sudoku/P12-KorideMok/: Board-KorideMok.cpp  Board-KorideMok.hpp  BoardTypes-KorideMok.hpp  Frame-KorideMok.hpp  Game-KorideMok.cpp  Game-KorideMok.hpp  P11proof.txt  P12proof.txt  P6proof.txt  P7proof.txt  Square-KorideMok.cpp  Square-KorideMok.hpp  Stack-KorideMok.cpp  Stack-KorideMok.hpp  State-KorideMok.hpp  UnitTests-KorideMok.hpp  makefile  tools.hpp
CSCI-4526-Sudoku/P2/: Square-KorideMok.cpp  Square-KorideMok.hpp  State-KorideMok.cpp  State-KorideMok.hpp  SudokuMain-KorideMok.cpp  UnitTests-KorideMok.cpp  UnitTests-KorideMok.hpp  tools.hpp
CSCI-4526-Sudoku/P2-KorideMok/: Output.txt  Square-KorideMok.cpp  Square-KorideMok.hpp  State-KorideMok.cpp  State-KorideMok.hpp  SudokuMain-KorideMok.cpp  UnitTests-KorideMok.cpp  UnitTests-KorideMok.hpp  Unit_Test.txt
CSCI-4526-Sudoku/P3-KorideMok/: Game-KorideMok.cpp  Game-KorideMok.hpp  Output.txt  Square-KorideMok.cpp  State-KorideMok.hpp  SudokuMain-KorideMok.cpp  game.cpp  game.hpp  main.cpp  tools.cpp  tools.hpp
CSCI-4526-Sudoku/P4-KorideMok/: Board-KorideMok.cpp  Board-KorideMok.hpp  Game-KorideMok.cpp  Game-KorideMok.hpp  P4output.txt  Square-KorideMok.cpp  Square-KorideMok.hpp  State-KorideMok.cpp  State-KorideMok.hpp  SudokuMain-KorideMok.cpp  UnitTests-KorideMok.cpp  UnitTests-KorideMok.hpp  input.txt  tools.cpp
CSCI-4526-Sudoku/P5-KorideMok/: Board-KorideMok.cpp  Board-KorideMok.hpp  CMakeLists.txt  Cluster-KorideMok.cpp  Cluster-KorideMok.hpp  Game-KorideMok.cpp  Game-KorideMok.hpp  P5output.txt  Square-KorideMok.cpp  Square-KorideMok.hpp  State-KorideMok.cpp  State-KorideMok.hpp  SudokuMain-KorideMok.cpp  UnitTests-KorideMok.cpp  UnitTests-KorideMok.hpp
CSCI-4526-Sudoku/P6-KorideMok/: Board-KorideMok.cpp  Board-KorideMok.hpp  CMakeLists.txt  Cluster-KorideMok.cpp  Cluster-KorideMok.hpp  DiagBoard-KorideMok.cpp  DiagBoard-KorideMok.hpp  Game-KorideMok.cpp  Game-KorideMok.hpp  P6output.txt  Square-KorideMok.cpp  Square-KorideMok.hpp  State-KorideMok.hpp  SudokuMain-KorideMok.cpp  UnitTests-KorideMok.cpp  UnitTests-KorideMok.hpp  tools.cpp  tools.hpp
CSCI-4526-Sudoku/P7-KorideMok/: Board-KorideMok.cpp  Board-KorideMok.hpp  CMakeLists.txt  Cluster-KorideMok.cpp  DiagBoard-KorideMok.cpp  DiagBoard-KorideMok.hpp  Exceptions-KorideMok.cpp  Exceptions.cpp  Exceptions.hpp  Game-KorideMok.cpp  Game-KorideMok.hpp  P7output.txt  Square-KorideMok.cpp  Square-KorideMok.hpp  State-KorideMok.cpp  State-KorideMok.hpp  SudokuMain-KorideMok.cpp  UnitTests-KorideMok.cpp  UnitTests-KorideMok.hpp  tools.cpp
CSCI-4526-Sudoku/P8-KorideMok/: Board-KorideMok.cpp  Board-KorideMok.hpp  CMakeLists.txt  DiagBoard-KorideMok.cpp  Exceptions-KorideMok.cpp  Exceptions-KorideMok.hpp  Game-KorideMok.hpp  State-KorideMok.cpp  State-KorideMok.hpp  SudokuMain-KorideMok.cpp  makefile
CSCI-4526-Sudoku/P8-KorideMok/CanView/: GridChar.cpp
CSCI-4526-Sudoku/P8-KorideMok/CanView/__MACOSX/: ._CanView.hpp  ._Canvas.cpp  ._Canvas.hpp  ._GridChar.cpp  ._GridChar.hpp  ._MixedChar.cpp  ._MixedChar.hpp  ._Viewer.cpp  ._Viewer.hpp
CSCI-4526-Sudoku/P9-KorideMok/: Board-KorideMok.cpp  Board-KorideMok.hpp  Cluster-KorideMok.cpp  DiagBoard-KorideMok.cpp  Frame-KorideMok.cpp  Frame-KorideMok.hpp  Game-KorideMok.cpp  Game-KorideMok.hpp  Square-KorideMok.cpp  Square-KorideMok.hpp  Stack-KorideMok.hpp  State-KorideMok.cpp  State-KorideMok.hpp  makefile
CSCI-4534/: .gitignore  LICENSE  README.md
CSCI-4536/: README.md
CSCI-4547/: .gitignore  main.cpp  params.cpp  params.hpp
Cryptography (CSCI-4534)/: .gitignore
Interactive Game Design (CSCI-4476)/: LICENSE.md
Systems Programming (CSCI-4547)/: .gitignore  main.cpp  params.cpp
(+415 files in other folders)
