cmake_minimum_required(VERSION 3.23)
project(Sudoku-Project-Master)

set(CMAKE_CXX_STANDARD 14)

include_directories(P1-KorideMok
        P2-KorideMok
        P3-KorideMok
        P4-KorideMok
        P5-KorideMok
        P6-KorideMok
        P7-KorideMok
        P8-KorideMok
        P10-KorideMok
        P11-KorideMok
        )

add_executable(P1-KorideMok
        P1-KorideMok/SudokuMain-KorideMok.cpp
        P1-KorideMok/tools.cpp
        P1-KorideMok/tools.hpp
        P1-KorideMok/UnitTests-KorideMok.cpp
        P1-KorideMok/UnitTests-KorideMok.hpp
        P1-KorideMok/State-KorideMok.hpp
        P1-KorideMok/State-KorideMok.cpp)

add_executable(P2-KorideMok
        P2-KorideMok/Square-KorideMok.cpp
        P2-KorideMok/Square-KorideMok.hpp
        P2-KorideMok/SudokuMain-KorideMok.cpp
        P2-KorideMok/tools.cpp
        P2-KorideMok/tools.hpp
        P2-KorideMok/UnitTests-KorideMok.cpp
        P2-KorideMok/UnitTests-KorideMok.hpp
        P2-KorideMok/State-KorideMok.hpp
        P2-KorideMok/State-KorideMok.cpp)

add_executable(P3-KorideMok
        P3-KorideMok/Square-KorideMok.cpp
        P3-KorideMok/Square-KorideMok.hpp
        P3-KorideMok/SudokuMain-KorideMok.cpp
        P3-KorideMok/tools.cpp
        P3-KorideMok/tools.hpp
        P3-KorideMok/UnitTests-KorideMok.cpp
        P3-KorideMok/UnitTests-KorideMok.hpp
        P3-KorideMok/State-KorideMok.hpp
        P3-KorideMok/State-KorideMok.cpp
        P3-KorideMok/Game-KorideMok.hpp
        P3-KorideMok/Game-KorideMok.cpp)

add_executable(P4-KorideMok
        P4-KorideMok/Square-KorideMok.cpp
        P4-KorideMok/Square-KorideMok.hpp
        P4-KorideMok/SudokuMain-KorideMok.cpp
        P4-KorideMok/tools.cpp
        P4-KorideMok/tools.hpp
        P4-KorideMok/UnitTests-KorideMok.cpp
        P4-KorideMok/UnitTests-KorideMok.hpp
        P4-KorideMok/State-KorideMok.hpp
        P4-KorideMok/State-KorideMok.cpp
        P4-KorideMok/Game-KorideMok.hpp
        P4-KorideMok/Game-KorideMok.cpp
        P4-KorideMok/Board-KorideMok.hpp
        P4-KorideMok/Board-KorideMok.cpp)

add_executable(P5-KorideMok
        P5-KorideMok/Square-KorideMok.cpp
        P5-KorideMok/Square-KorideMok.hpp
        P5-KorideMok/SudokuMain-KorideMok.cpp
        P5-KorideMok/tools.cpp
        P5-KorideMok/tools.hpp
        P5-KorideMok/UnitTests-KorideMok.cpp
        P5-KorideMok/UnitTests-KorideMok.hpp
        P5-KorideMok/State-KorideMok.hpp
        P5-KorideMok/State-KorideMok.cpp
        P5-KorideMok/Game-KorideMok.hpp
        P5-KorideMok/Game-KorideMok.cpp
        P5-KorideMok/Board-KorideMok.hpp
        P5-KorideMok/Board-KorideMok.cpp
        P5-KorideMok/Cluster-KorideMok.hpp
        P5-KorideMok/Cluster-KorideMok.cpp)

add_executable(P6-KorideMok
        P6-KorideMok/Square-KorideMok.cpp
        P6-KorideMok/Square-KorideMok.hpp
        P6-KorideMok/SudokuMain-KorideMok.cpp
        P6-KorideMok/tools.cpp
        P6-KorideMok/tools.hpp
        P6-KorideMok/UnitTests-KorideMok.cpp
        P6-KorideMok/UnitTests-KorideMok.hpp
        P6-KorideMok/State-KorideMok.hpp
        P6-KorideMok/State-KorideMok.cpp
        P6-KorideMok/Game-KorideMok.hpp
        P6-KorideMok/Game-KorideMok.cpp
        P6-KorideMok/Board-KorideMok.hpp
        P6-KorideMok/Board-KorideMok.cpp
        P6-KorideMok/Cluster-KorideMok.hpp
        P6-KorideMok/Cluster-KorideMok.cpp
        P6-KorideMok/DiagBoard-KorideMok.hpp
        P6-KorideMok/DiagBoard-KorideMok.cpp)

add_executable(P7-KorideMok
        P7-KorideMok/Square-KorideMok.cpp
        P7-KorideMok/Square-KorideMok.hpp
        P7-KorideMok/SudokuMain-KorideMok.cpp
        P7-KorideMok/tools.cpp
        P7-KorideMok/tools.hpp
        P7-KorideMok/UnitTests-KorideMok.cpp
        P7-KorideMok/UnitTests-KorideMok.hpp
        P7-KorideMok/State-KorideMok.hpp
        P7-KorideMok/State-KorideMok.cpp
        P7-KorideMok/Game-KorideMok.hpp
        P7-KorideMok/Game-KorideMok.cpp
        P7-KorideMok/Board-KorideMok.hpp
        P7-KorideMok/Board-KorideMok.cpp
        P7-KorideMok/Cluster-KorideMok.hpp
        P7-KorideMok/Cluster-KorideMok.cpp
        P7-KorideMok/DiagBoard-KorideMok.hpp
        P7-KorideMok/DiagBoard-KorideMok.cpp
        P7-KorideMok/Exceptions-KorideMok.hpp
        P7-KorideMok/Exceptions-KorideMok.cpp)

add_executable(P8-KorideMok
        P8-KorideMok/Square-KorideMok.cpp
        P8-KorideMok/Square-KorideMok.hpp
        P8-KorideMok/SudokuMain-KorideMok.cpp
        P8-KorideMok/tools.cpp
        P8-KorideMok/tools.hpp
        P8-KorideMok/UnitTests-KorideMok.cpp
        P8-KorideMok/UnitTests-KorideMok.hpp
        P8-KorideMok/State-KorideMok.hpp
        P8-KorideMok/State-KorideMok.cpp
        P8-KorideMok/Game-KorideMok.hpp
        P8-KorideMok/Game-KorideMok.cpp
        P8-KorideMok/Board-KorideMok.hpp
        P8-KorideMok/Board-KorideMok.cpp
        P8-KorideMok/Cluster-KorideMok.hpp
        P8-KorideMok/Cluster-KorideMok.cpp
        P8-KorideMok/DiagBoard-KorideMok.hpp
        P8-KorideMok/DiagBoard-KorideMok.cpp
        P8-KorideMok/Exceptions-KorideMok.hpp
        P8-KorideMok/Exceptions-KorideMok.cpp
        P8-KorideMok/Viewer.hpp
        P8-KorideMok/Viewer.cpp
        P8-KorideMok/Canvas.hpp
        P8-KorideMok/Canvas.cpp
        P8-KorideMok/CanView.hpp
        P8-KorideMok/GridChar.hpp
        P8-KorideMok/GridChar.cpp
        P8-KorideMok/MixedChar.hpp
        P8-KorideMok/MixedChar.cpp
        )

add_executable(P10-KorideMok
        P10-KorideMok/Square-KorideMok.cpp
        P10-KorideMok/Square-KorideMok.hpp
        P10-KorideMok/SudokuMain-KorideMok.cpp
        P10-KorideMok/tools.cpp
        P10-KorideMok/tools.hpp
        P10-KorideMok/UnitTests-KorideMok.cpp
        P10-KorideMok/UnitTests-KorideMok.hpp
        P10-KorideMok/State-KorideMok.hpp
        P10-KorideMok/State-KorideMok.cpp
        P10-KorideMok/Game-KorideMok.hpp
        P10-KorideMok/Game-KorideMok.cpp
        P10-KorideMok/Board-KorideMok.hpp
        P10-KorideMok/Board-KorideMok.cpp
        P10-KorideMok/Cluster-KorideMok.hpp
        P10-KorideMok/Cluster-KorideMok.cpp
        P10-KorideMok/DiagBoard-KorideMok.hpp
        P10-KorideMok/DiagBoard-KorideMok.cpp
        P10-KorideMok/Exceptions-KorideMok.hpp
        P10-KorideMok/Exceptions-KorideMok.cpp
        P10-KorideMok/Viewer.hpp
        P10-KorideMok/Viewer.cpp
        P10-KorideMok/Canvas.hpp
        P10-KorideMok/Canvas.cpp
        P10-KorideMok/CanView.hpp
        P10-KorideMok/GridChar.hpp
        P10-KorideMok/GridChar.cpp
        P10-KorideMok/MixedChar.hpp
        P10-KorideMok/MixedChar.cpp
        P10-KorideMok/Stack-KorideMok.cpp
        P10-KorideMok/Stack-KorideMok.hpp
        P10-KorideMok/Frame-KorideMok.cpp
        P10-KorideMok/Frame-KorideMok.hpp
        )

add_executable(P11-KorideMok
        P11-KorideMok/Square-KorideMok.cpp
        P11-KorideMok/Square-KorideMok.hpp
        P11-KorideMok/SudokuMain-KorideMok.cpp
        P11-KorideMok/tools.cpp
        P11-KorideMok/tools.hpp
        P11-KorideMok/UnitTests-KorideMok.cpp
        P11-KorideMok/UnitTests-KorideMok.hpp
        P11-KorideMok/State-KorideMok.hpp
        P11-KorideMok/State-KorideMok.cpp
        P11-KorideMok/Game-KorideMok.hpp
        P11-KorideMok/Game-KorideMok.cpp
        P11-KorideMok/Board-KorideMok.hpp
        P11-KorideMok/Board-KorideMok.cpp
        P11-KorideMok/Cluster-KorideMok.hpp
        P11-KorideMok/Cluster-KorideMok.cpp
        P11-KorideMok/BoardTypes-KorideMok.hpp
        P11-KorideMok/BoardTypes-KorideMok.cpp
        P11-KorideMok/Exceptions-KorideMok.hpp
        P11-KorideMok/Exceptions-KorideMok.cpp
        P11-KorideMok/Viewer.hpp
        P11-KorideMok/Viewer.cpp
        P11-KorideMok/Canvas.hpp
        P11-KorideMok/Canvas.cpp
        P11-KorideMok/CanView.hpp
        P11-KorideMok/GridChar.hpp
        P11-KorideMok/GridChar.cpp
        P11-KorideMok/MixedChar.hpp
        P11-KorideMok/MixedChar.cpp
        P11-KorideMok/Stack-KorideMok.cpp
        P11-KorideMok/Stack-KorideMok.hpp
        P11-KorideMok/Frame-KorideMok.cpp
        P11-KorideMok/Frame-KorideMok.hpp
        )